--- a/examples/minimal_pub_sub/Cargo.toml
+++ b/examples/minimal_pub_sub/Cargo.toml
@@ -2,7 +2,11 @@
 name = "examples_rclrs_minimal_pub_sub"
 version = "0.3.1"
 # This project is not military-sponsored, Jacob's employment contract just requires him to use this email address
-authors = ["Esteve Fernandez <esteve@apache.org>", "Nikolai Morin <nnmmgit@gmail.com>", "Jacob Hassold <jacob.a.hassold.civ@army.mil>"]
+authors = [
+    "Esteve Fernandez <esteve@apache.org>",
+    "Nikolai Morin <nnmmgit@gmail.com>",
+    "Jacob Hassold <jacob.a.hassold.civ@army.mil>",
+]
 edition = "2021"
 
 [[bin]]
@@ -22,16 +26,15 @@ name = "zero_copy_publisher"
 path = "src/zero_copy_publisher.rs"
 
 [dependencies]
-anyhow = {version = "1", features = ["backtrace"]}
-
+anyhow = { version = "1", features = ["backtrace"] }
+rand = "0.8.5"
+uhlc = "0.5.1"
+bytemuck = "1.12"
+csv = "1.1.6"
+rosidl_runtime_rs = "*"
+# std_msgs = "*"
 [dependencies.rclrs]
-version = "0.3"
-
-[dependencies.rosidl_runtime_rs]
-version = "0.3"
+version = "*"
 
 [dependencies.std_msgs]
 version = "*"
-
-[package.metadata.ros]
-install_to_share = ["launch"]
